--- a/www/css/installer.css
+++ b/www/css/installer.css
@@ -1,5 +1,3 @@
-/* @override http://cintient/css/installer.css */
-
 /*
  * 
  *  Cintient, Continuous Integration made simple.
@@ -22,137 +20,59 @@
  *  
  */
  
- 
-#installer form
-{
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  width: 500px;
-}
-
-#installer .installer_step
-{
-  text-align: left;
-  margin-bottom: 40px;
-}
-
-#installer .error
-{
-  color: #FF2800;
-}
-
-#installer .success
-{
-  color: #7CC400;
-}
-
-#installer li
-{
-  padding: 10px;
-  width: 450px;
-}
-
-#installer button
-{
-  color: #555;
-  font-size: 13pt;
-  width: auto;
-  height: auto;
-  border: 2px solid #999;
-  padding-left: 10px;
-  padding-right: 10px;
-  -webkit-border-radius: 7px 7px 7px 7px;
-  -moz-border-radius: 7px 7px 7px 7px;
-  border-radius: 7px 7px 7px 7px;
-  box-shadow: 2px 2px 20px #111;
-  -webkit-box-shadow: #111 2px 2px 20px;
-  -moz-box-shadow: #111 2px 2px 15px;
-  /*background: rgb(230,230,230);*/
-  /*background: rgb(124,196,0);*/
-  /*background: rgb(255,40,0);*/
-  background: #FBFBFB; /* non-CSS3 */
-  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd'); /* for IE */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.16, #fff), color-stop(0.6, #ddd), color-stop(0.9, #bbb)); /* for webkit browsers */
-  background: -moz-linear-gradient(top, #fff 16%, #ddd 60%, #bbb 90%); /* for firefox 3.6+ */
-  /*transition: all 0.1s ease-in-out;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;*/
-  cursor: pointer;
-  float: left;
-  margin-right: 10px;
-  margin-top: 20px;
-}
-
-#installer button.backButton
-{
-  font-size: 7pt;
-  margin-top: 26px;
-}
-
-#installer button.buttonText
-{
-  padding-top: 3px;
-}
-
-#installer .buttonTextInactive
-{
-  opacity: .2;
-  cursor: default;
-}
-
-#splashHeader .greetings
-{
-  margin-top: 60px;
-  font-size: 2em;
-}
-
-.installer_step ul.item
-{
-  clear: both;
-}
-
-.label
-{
-  font-size: 1.4em;
-}
-
-.textfieldContainer
-{
-  margin-bottom: 3px;
-}
-
-.hidden
-{
-  visibility: hidden;
-}
-
-.noDisplay
+.installerStep, .nodisplay
 {
   display: none;
 }
 
-#done
+label
+{
+  font-size: 1.4em;
+}
+
+.help-block
+{
+  font-size: 1.1em;
+}
+
+form div.clearfix.success .help-block, form div.clearfix.success .help-inline {
+  color: rgb(124,196,0);
+}
+
+form div.clearfix.fail .help-block, form div.clearfix.fail .help-inline {
+  color: rgb(255,40,0);
+}
+
+#welcomeScreen, #finished
+{
+  margin-top: 16em;
+}
+#welcomeScreen, .cintientLettering, #finished
 {
   text-align: center;
+  vertical-align: middle;
 }
 
-#pleaseWait
+#welcomeScreen .cintientLettering
 {
-  font-size: 20pt;
+  font-size: 10em;
 }
 
-#done img
+#welcomeScreen .cintientLettering, #welcomeScreen .greetings, #finished
 {
+  text-shadow: white 1px 1px 1px;
+}
+
+#welcomeScreen .greetings
+{
+  font-size: 3em;
+  margin-top: 90px;
+  color: #999;
+}
+
+#logoLettering
+{
+  color: rgb(230,230,230);
   margin-top: 8px;
-}
-
-#done #result
-{
-  font-size: 38pt;
-}
-
-#done #resultMessage
-{
-  margin-top: 12px;
+  margin-left: -7px;
 }
