Initial support for installer upgrade, such that old data is migrated into the version schema of a new Cintient release. This allows for seamless and frictionless schema changes whenever required on a new release. Added ability to specify TRANSACTION types, from DEFERRED (default), IMMEDIATE and EXCLUSIVE. Fixed transactions to be nesting friendly. If a new transaction is requested, inside another, a counter is incremented - such that only the first transaction requester can actually end a transaction. New attribute enddate in a build, in order to implement build duration in the near future. Small layout tweaks in the installer. Implementation of autosave flag, so that dummy objects can be created and never saved to the database. Fixed a few bugs in the dashboard for recently created and never built projects.

--- a/www/css/installer.css
+++ b/www/css/installer.css
@@ -1,3 +1,5 @@
+/* @override http://cintient/www/css/installer.css */
+
 /*
  * 
  *  Cintient, Continuous Integration made simple.
@@ -30,16 +32,28 @@ label
   font-size: 1.4em;
 }
 
+label small
+{
+  font-size: .98em;
+  color: #bbb;
+}
+
+#password > .input
+{
+  /* Small hack to have the password textfields nicely separated */
+  margin-bottom: 12px;
+}
+
 .help-block
 {
   font-size: 1.1em;
 }
 
-form div.clearfix.success .help-block, form div.clearfix.success .help-inline {
+form div.clearfix.success .help-block, form div.clearfix.success /*.help-inline*/ {
   color: rgb(124,196,0);
 }
 
-form div.clearfix.fail .help-block, form div.clearfix.fail .help-inline {
+form div.clearfix.fail .help-block, form div.clearfix.fail /*.help-inline*/ {
   color: rgb(255,40,0);
 }
 
