Added executables to the SystemSettings - SystemSettings will now hold a configured list of executables to be used by the platform. Added System settings tab to the administration area. Changed Administration menu link. AJAX access to administration areas is now allowed only to root. Fixed issue with inactive project sources reset, on SCM configuration changes. ScmConnectors now use the specified binaries in the SystemSettings. Took the chance to seriously rework the connectors.

--- a/www/css/cintient.css
+++ b/www/css/cintient.css
@@ -408,7 +408,7 @@ user-select: none;
 
 
 
-/* @group Dashboard */
+/* @group Admin */
 
 #admin p
 {
@@ -419,7 +419,7 @@ user-select: none;
   margin-bottom: 18px;
 }
 
-#admin .btn
+#admin #btnLogRefresh
 {
   clear: none;
   float: left;
