Fixed small layout issue with checkboxes and radiobuttons being slightly missaligned.

--- a/www/css/cintient.css
+++ b/www/css/cintient.css
@@ -969,7 +969,7 @@ padding: 4px;
   padding: 0px;
 }
 
-#projectEdit #builderElementsChosen ul
+#projectEdit #builderElementsChosen > ul
 {
   margin-left: 19px;
 }
